image hover effect fix on mobile

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -65,7 +65,8 @@
 
    .about__me {
     width: 50%;
-    margin: 2rem auto 4rem;
+    margin: 2rem auto;
+    ;
 
    }
 
@@ -77,13 +78,17 @@
     margin: 1rem 0 1.5rem;
    }
 
+   .about__me.image {
+    width: 100%;
+}
+
 }
 
 /* ============== MEDIA QUERIES (SMALL DEVICES) ================ */
 @media screen and (max-width: 600px) {
     .about__me {
         width: 65%;
-        margin: 0 auto 3rem;
+        margin: 0 auto;
     }
 
     .about__cards {
